--- a/confd/conf.d/production.toml
+++ b/confd/conf.d/production.toml
@@ -7,6 +7,7 @@ keys = [
     "/ansyn/overlay/api/find",
     "/ansyn/overlay/api/default",
     "/ansyn/login/baseurl",
+    "/ansyn/login/active",
     "/ansyn/menu/background",
     "/ansyn/menu/color",
     "/ansyn/menu/mode",
