--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
 		"lodash": "4.17.4",
 		"lodash-decorators": "4.5.0",
 		"moment": "^2.21.0",
-		"new-ansyn-event-drops": "^1.0.4",
+		"new-ansyn-event-drops": "1.0.5",
 		"ng-infinitescroll": "1.0.12",
 		"ngx-treeview": "^2.0.6",
 		"ol": "4.6.3",
