feat: forkMe on menu component

--- a/confd/conf.d/production.toml
+++ b/confd/conf.d/production.toml
@@ -11,5 +11,6 @@ keys = [
     "/ansyn/menu/background",
     "/ansyn/menu/color",
     "/ansyn/menu/mode",
+    "/ansyn/menu/forkme",
     "/ansyn/imagery/mapsource"
 ]
