--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
 	"compileOnSave": false,
 	"compilerOptions": {
-		"baseUrl": "src",
+		"baseUrl": "./",
 		"paths": {
-			"@ansyn/*": ["app/@ansyn/*"],
-			"@builder/*": ["app/builder/*"]
+			"@ansyn/*": ["src/app/@ansyn/*"],
+			"@builder/*": ["src/app/builder/*"]
 		},
 		"outDir": "./dist/out-tsc",
 		"sourceMap": true,
