upgrade: convert install on travis config ('yarn' to 'npm')

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_install:
   - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
 
 install:
-  - yarn install
+  - npm install
 
 # Init GUI
 before_script:
@@ -34,7 +34,6 @@ script:
   - sh -x scripts/build.sh ansyn $TRAVIS_COMMIT $TRAVIS_TAG
 
 cache:
-  yarn: true
   directories:
      - ./node_modules
 
