turn off build optimizer for prod (open issue on angular-cli)

--- a/angular.json
+++ b/angular.json
@@ -53,7 +53,7 @@
               "aot": true,
               "extractLicenses": true,
               "vendorChunk": false,
-              "buildOptimizer": true,
+              "buildOptimizer": false,
               "fileReplacements": [
                 {
                   "replace": "src/configuration/configuration.ts",
