--- a/angular.json
+++ b/angular.json
@@ -263,31 +263,6 @@
         }
       }
     },
-    "builder-e2e": {
-      "root": "",
-      "sourceRoot": "e2e",
-      "projectType": "application",
-      "architect": {
-        "e2e": {
-          "builder": "@angular-devkit/build-angular:protractor",
-          "options": {
-            "protractorConfig": "./protractor.conf.js",
-            "devServerTarget": "builder:serve"
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "e2e/tsconfig.e2e.json"
-            ],
-            "exclude": [
-              "**/node_modules/**/*"
-            ]
-          }
-        }
-      }
-    },
     "builder-dev": {
       "root": "",
       "sourceRoot": "src",
@@ -403,10 +378,11 @@
         }
       }
     },
-    "builder-dev-e2e": {
-      "root": "",
-      "sourceRoot": "e2e",
-      "projectType": "application",
+    "core": {
+      "root": "projects/core",
+      "sourceRoot": "src/app/@ansyn/core",
+      "projectType": "library",
+      "prefix": "lib",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-ng-packagr:build",
@@ -416,28 +392,8 @@
           },
           "configurations": {
             "production": {
-              "project": "projects/core/ng-package.prod.json"
+              "project": "projects/core/ng-package.json"
             }
-          }
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "main": "projects/core/src/test.ts",
-            "tsConfig": "projects/core/tsconfig.spec.json",
-            "karmaConfig": "projects/core/karma.conf.js"
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "projects/core/tsconfig.lib.json",
-              "projects/core/tsconfig.spec.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
           }
         }
       }
