--- a/angular.json
+++ b/angular.json
@@ -392,8 +392,48 @@
           },
           "configurations": {
             "production": {
-              "project": "projects/ansyn/core/ng-package.prod.json"
+              "project": "projects/ansyn/core/ng-package.json"
             }
+          }
+        }
+      }
+    },
+    "@ansyn/imagery": {
+      "root": "projects/ansyn/imagery",
+      "sourceRoot": "src/app/@ansyn/imagery",
+      "projectType": "library",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/ansyn/imagery/tsconfig.lib.json",
+            "project": "projects/ansyn/imagery/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "project": "projects/ansyn/imagery/ng-package.prod.json"
+            }
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/ansyn/imagery/src/test.ts",
+            "tsConfig": "projects/ansyn/imagery/tsconfig.spec.json",
+            "karmaConfig": "projects/ansyn/imagery/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/ansyn/imagery/tsconfig.lib.json",
+              "projects/ansyn/imagery/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
         }
       }
