--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "lint": "ng lint ansyn --type-check",
     "log": "git log master --pretty=format:\\\"%an\\\",\\\"%ai\\\",\\\"%s\\\",\\\"%H\\\" > log.csv && echo Commiter, Date, Message, Hash | cat - log.csv > log2.csv && mv log2.csv log.csv",
     "ng": "ng",
-    "start": "node scripts/generate-config.js && ng serve --sourcemaps --extract-css",
+    "start": "node scripts/generate-config.js && ng serve",
     "start:aot": "ng serve --aot true",
     "start:builder-dev": "ng s --app builder-dev",
     "test": "ng test",
