--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "new-ansyn-event-drops": "1.0.5",
     "ng-infinitescroll": "1.0.12",
     "ngx-treeview": "^2.0.6",
+    "ngx-bootstrap": "^2.0.4",
     "ol": "4.6.3",
     "primeng": "4.1.3",
     "proj4": "2.4.3",
