--- a/package.json
+++ b/package.json
@@ -29,28 +29,26 @@
     "testCompile": "cd build && gulp testCompile"
   },
   "dependencies": {
-    "@angular/common": "^6.0.3",
-    "@angular/core": "^6.0.3",
-    "@angular/compiler": "^6.0.3",
     "@angular/animations": "^6.0.3",
+    "@angular/common": "^6.0.3",
+    "@angular/compiler": "^6.0.3",
+    "@angular/core": "^6.0.3",
     "@angular/forms": "^6.0.3",
     "@angular/http": "^6.0.3",
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
-    "@types/geojson": "^7946.0.3",
-    "core-js": "^2.5.4",
-    "rxjs": "^6.2.1",
-    "rxjs-compat": "^6.2.1",
-    "zone.js": "^0.8.26",
     "@ngrx/core": "^1.2.0",
     "@ngrx/effects": "^6.0.1",
     "@ngrx/entity": "^6.0.1",
     "@ngrx/store": "^6.0.1",
     "@ngrx/store-devtools": "^6.0.1",
+    "@ngx-translate/core": "^10.0.2",
     "@turf/turf": "5.1.6",
+    "@types/geojson": "^7946.0.3",
     "@types/openlayers": "^4.6.2",
     "angular2-uuid": "1.1.1",
+    "core-js": "^2.5.4",
     "crypto-js": "3.1.9-1",
     "d3": "^4.13.0",
     "debounce": "1.0.0",
@@ -63,14 +61,17 @@
     "moment": "^2.21.0",
     "new-ansyn-event-drops": "1.0.5",
     "ng-infinitescroll": "1.0.12",
-    "ngx-treeview": "^2.0.6",
     "ngx-bootstrap": "^2.0.4",
+    "ngx-treeview": "^2.0.6",
     "ol": "4.6.3",
     "primeng": "4.1.3",
     "proj4": "2.4.3",
     "reselect": "3.0.0",
     "rison": "0.1.1",
-    "wellknown": "0.5.0"
+    "rxjs": "^6.2.1",
+    "rxjs-compat": "^6.2.1",
+    "wellknown": "0.5.0",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^6.0.3",
