--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@ngrx/store": "^6.0.1",
     "@ngrx/store-devtools": "^6.0.1",
     "@ngx-translate/core": "^10.0.2",
+    "@ngx-translate/http-loader": "^3.0.1",
     "@turf/turf": "5.1.6",
     "@types/geojson": "^7946.0.3",
     "@types/openlayers": "^4.6.2",
