--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "d3": "^4.13.0",
     "debounce": "1.0.0",
     "enhanced-resolve": "3.3.0",
+    "file-saver": "^1.3.8",
     "flatpickr": "4.1.2",
     "font-awesome": "^4.7.0",
     "geojson": "^0.5.0",
@@ -75,35 +76,22 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.3",
-    "@angular-devkit/build-ng-packagr": "~0.6.8",
     "@angular-devkit/build-angular": "~0.6.8",
-    "ng-packagr": "^3.0.0-rc.2",
-    "tsickle": ">=0.25.5",
-    "tslib": "^1.7.1",
-    "typescript": "~2.7.2",
+    "@angular-devkit/build-ng-packagr": "~0.6.8",
     "@angular/cli": "~6.0.8",
+    "@angular/compiler-cli": "^6.0.3",
     "@angular/language-service": "^6.0.3",
+    "@types/d3": "^4.13.0",
+    "@types/file-saver": "^1.3.0",
+    "@types/geojson": "7946.0.3",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.2.1",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.0",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.3.0",
-    "ts-node": "~5.0.1",
-    "tslint": "~5.9.1",
-    "@types/d3": "^4.13.0",
-    "@types/geojson": "7946.0.3",
     "@types/lodash": "4.14.88",
+    "@types/node": "~8.9.4",
     "@types/ol": "^4.6.1",
     "@types/rison": "0.0.6",
     "@types/wellknown": "0.5.0",
+    "codelyzer": "~4.2.1",
     "find-in-files": "0.4.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
@@ -118,11 +106,25 @@
     "gulp-replace": "^0.6.1",
     "gulp-sequence": "^1.0.0",
     "gulp-shell": "^0.6.3",
+    "jasmine-core": "~2.99.1",
     "jasmine-marbles": "0.3.1",
+    "jasmine-spec-reporter": "~4.2.1",
     "jsdoc": "3.5.5",
+    "karma": "~1.7.1",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.0",
+    "karma-jasmine": "~1.1.1",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "ng-packagr": "^3.0.0-rc.2",
     "pre-commit": "1.2.2",
+    "protractor": "~5.3.0",
     "protractor-screenshoter-plugin": "^0.5.0",
-    "replace": "0.3.0"
+    "replace": "0.3.0",
+    "ts-node": "~5.0.1",
+    "tsickle": ">=0.25.5",
+    "tslib": "^1.7.1",
+    "tslint": "~5.9.1",
+    "typescript": "~2.7.2"
   },
   "precommit": [
     "fix-all",
