fix: CR request changes

--- a/confd/conf.d/production.toml
+++ b/confd/conf.d/production.toml
@@ -12,5 +12,6 @@ keys = [
     "/ansyn/menu/color",
     "/ansyn/menu/mode",
     "/ansyn/menu/forkme",
-    "/ansyn/imagery/mapsource"
+    "/ansyn/imagery/mapsource",
+    "ansyn/tools/displayid"
 ]
