fix: event drops new package

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@ansyn/event-drops": "0.0.1",
     "@ngrx/core": "^1.2.0",
     "@ngrx/effects": "^6.0.1",
     "@ngrx/entity": "^6.0.1",
@@ -61,7 +62,6 @@
     "lodash": "4.17.4",
     "lodash-decorators": "4.5.0",
     "moment": "^2.21.0",
-    "new-ansyn-event-drops": "1.0.5",
     "ng-infinitescroll": "1.0.12",
     "ngx-bootstrap": "^2.0.4",
     "ngx-treeview": "^2.0.6",
