--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
-    "@ansyn/event-drops": "0.0.1",
+    "@ansyn/event-drops": "^1.0.0",
     "@ngrx/core": "^1.2.0",
     "@ngrx/effects": "^6.0.1",
     "@ngrx/entity": "^6.0.1",
