--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "flatpickr": "4.1.2",
     "font-awesome": "^4.7.0",
     "geojson": "^0.5.0",
+    "gtran-kml": "^1.2.1",
     "lodash": "4.17.4",
     "lodash-decorators": "4.5.0",
     "moment": "^2.21.0",
@@ -72,6 +73,7 @@
     "rison": "0.1.1",
     "rxjs": "^6.2.1",
     "rxjs-compat": "^6.2.1",
+    "tokml": "^0.4.0",
     "wellknown": "0.5.0",
     "zone.js": "^0.8.26"
   },
