--- a/confd/conf.d/production.toml
+++ b/confd/conf.d/production.toml
@@ -13,5 +13,8 @@ keys = [
     "/ansyn/menu/mode",
     "/ansyn/menu/forkme",
     "/ansyn/imagery/mapsource",
-    "/ansyn/tools/displayid"
+    "/ansyn/tools/displayid",
+    "/ansyn/overlay/planet/sensor/names",
+    "/ansyn/overlay/open/aerial/sensor/names",
+    "/ansyn/overlay/idaho/sensor/names"
 ]
