--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ before_deploy:
 
 deploy:
   - provider: script
-    script: sh -x scripts/deploy.sh ansyn/client-chrome.v.44 $TRAVIS_COMMIT ansyn-client-chrome-v44
+    script: sh -x scripts/deploy.sh ansyn/client-chrome.v.44 $TRAVIS_COMMIT ansyn-client-chrome-v44 ansyn-client-messi-service
     skip_cleanup: true
     on:
       branch: master
