--- a/.travis.yml
+++ b/.travis.yml
@@ -44,12 +44,12 @@ before_deploy:
 
 deploy:
   - provider: script
-    script: sh -x scripts/deploy.sh ansyn/client-chrome.v.44 $TRAVIS_COMMIT ansyn-client-chrome-v44
+    script: sh -x scripts/deploy.sh ansyn/client-chrome.v.44 $TRAVIS_COMMIT ansyn-client-chrome-v44 ansyn-client-messi-service
     skip_cleanup: true
     on:
       branch: master
   - provider: script
-    script: sh -x scripts/deploy.sh ansyn/client $TRAVIS_TAG ansyn-client
+    script: sh -x scripts/deploy.sh ansyn/client $TRAVIS_TAG ansyn-client ansyn-client-messi-service
     skip_cleanup: true
     on:
       tags: true
