--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "rison": "0.1.1",
     "rxjs": "^6.2.1",
     "rxjs-compat": "^6.2.1",
+    "tokml": "^0.4.0",
     "wellknown": "0.5.0",
     "zone.js": "^0.8.26"
   },
