--- a/src/app/@ansyn/menu-items/layers-manager/tsconfig.json
+++ b/src/app/@ansyn/menu-items/layers-manager/tsconfig.json
@@ -1,11 +1,10 @@
 {
-  "extends": "../../../tsconfig.app.json",
+  "extends": "../../../../tsconfig.app.json",
   "compilerOptions": {
     "paths": {
       "@ansyn/core/*": [
         "src/app/@ansyn/core/*"
       ]
-    },
-    "experimentalDecorators": true
+    }
   }
 }
