--- a/confd/conf.d/production.toml
+++ b/confd/conf.d/production.toml
@@ -16,5 +16,6 @@ keys = [
     "/ansyn/tools/displayid",
     "/ansyn/overlay/planet/sensor/names",
     "/ansyn/overlay/open/aerial/sensor/names",
-    "/ansyn/overlay/idaho/sensor/names"
+    "/ansyn/overlay/idaho/sensor/names",
+    "/ansyn/imisight/callback/url"
 ]
