--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "@angular/cli": "~6.0.8",
     "@angular/compiler-cli": "^6.0.3",
     "@angular/language-service": "^6.0.3",
+    "@types/auth0-js": "^8.11.5",
     "@types/d3": "^4.13.0",
     "@types/file-saver": "^1.3.0",
     "@types/geojson": "7946.0.3",
