--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "testCompile": "cd build && gulp testCompile"
   },
   "dependencies": {
-    "@angular/animations": "^6.0.3",
     "@angular/common": "^6.0.3",
-    "@angular/compiler": "^6.0.3",
     "@angular/core": "^6.0.3",
+    "@angular/compiler": "^6.0.3",
+    "@angular/animations": "^6.0.3",
     "@angular/forms": "^6.0.3",
     "@angular/http": "^6.0.3",
     "@angular/platform-browser": "^6.0.3",
@@ -79,10 +79,14 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.8",
-    "@angular-devkit/build-ng-packagr": "~0.6.8",
-    "@angular/cli": "~6.0.8",
     "@angular/compiler-cli": "^6.0.3",
+    "@angular-devkit/build-ng-packagr": "~0.6.8",
+    "@angular-devkit/build-angular": "~0.6.8",
+    "ng-packagr": "^3.0.0-rc.2",
+    "tsickle": ">=0.25.5",
+    "tslib": "^1.7.1",
+    "typescript": "~2.7.2",
+    "@angular/cli": "~6.0.8",
     "@angular/language-service": "^6.0.3",
     "@types/d3": "^4.13.0",
     "@types/file-saver": "^1.3.0",
@@ -118,16 +122,12 @@
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^3.0.0-rc.2",
     "pre-commit": "1.2.2",
     "protractor": "~5.3.0",
     "protractor-screenshoter-plugin": "^0.5.0",
     "replace": "0.3.0",
     "ts-node": "~5.0.1",
-    "tsickle": ">=0.25.5",
-    "tslib": "^1.7.1",
-    "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "tslint": "~5.9.1"
   },
   "precommit": [
     "fix-all",
