--- a/angular.json
+++ b/angular.json
@@ -440,21 +440,21 @@
         }
       }
     },
-    "ng-ansyn": {
-      "root": "projects/ng-ansyn",
-      "sourceRoot": "projects/ng-ansyn/src",
+    "@ansyn/ansyn": {
+      "root": "projects/ansyn/ansyn",
+      "sourceRoot": "projects/ansyn/ansyn/src",
       "projectType": "library",
       "prefix": "lib",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-ng-packagr:build",
           "options": {
-            "tsConfig": "projects/ng-ansyn/tsconfig.json",
-            "project": "projects/ng-ansyn/ng-package.json"
+            "tsConfig": "projects/ansyn/ansyn/tsconfig.json",
+            "project": "projects/ansyn/ansyn/ng-package.json"
           },
           "configurations": {
             "production": {
-              "project": "projects/ng-ansyn/ng-package.prod.json"
+              "project": "projects/ansyn/ansyn/ng-package.json"
             }
           }
         }
