--- a/src/app/@ansyn/core/overlays/tsconfig.json
+++ b/src/app/@ansyn/core/overlays/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../../tsconfig.app.json",
+  "extends": "../../../../tsconfig.app.json",
   "compilerOptions": {
     "paths": {
       "@ansyn/core/*": [
