--- a/projects/ansyn/core/tsconfig.json
+++ b/projects/ansyn/core/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "extends": "../../../tsconfig.json",
   "compilerOptions": {
+    "paths": {
+
+    },
     "outDir": "../../../out-tsc/lib",
     "target": "es2015",
     "module": "es2015",
@@ -12,14 +15,12 @@
     "experimentalDecorators": true,
     "importHelpers": true,
     "types": [],
-    "paths": {
-      "@ansyn/imagery/*": [
-        "src/app/@ansyn/imagery/*"
-      ],
-      "@ansyn/core/*": [
-        "dist/ansyn/core/*"
-      ]
-    }
+    "lib": [
+      "es2017",
+      "es2017.object",
+      "es2016.array.include",
+      "dom"
+    ]
   },
   "angularCompilerOptions": {
     "annotateForClosureCompiler": true,
