--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,15 @@
       "@ansyn/*": [
         "src/app/@ansyn/*"
       ],
+      "@ansyn/core": [
+        "src/app/@ansyn/core/public_api"
+      ],
+      "@ansyn/imagery": [
+        "src/app/@ansyn/imagery/public_api"
+      ],
+      "@ansyn/map-facade": [
+        "src/app/@ansyn/map-facade/public_api"
+      ],
       "@ansyn/event-drops": [
         "node_modules/@ansyn/event-drops"
       ],
