--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,7 @@
     "declaration": false,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
+    "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "target": "es5",
     "typeRoots": [
