--- a/src/app/@ansyn/core/tsconfig.json
+++ b/src/app/@ansyn/core/tsconfig.json
@@ -2,6 +2,9 @@
   "extends": "../../../tsconfig.app.json",
   "compilerOptions": {
     "paths": {
+      "configuration/*": [
+        "src/configuration/*"
+      ]
     }
   }
 }
