--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,9 @@
       "@ansyn/core": [
         "src/app/@ansyn/core/public_api"
       ],
+      "@ansyn/context": [
+        "src/app/@ansyn/context/public_api"
+      ],
       "@ansyn/imagery": [
         "src/app/@ansyn/imagery/public_api"
       ],
